# prebuilt_toolchains

./: .gitignore  README.md
.github/workflows/: gnu.yaml
gnu/awk/: .bazelrc  MODULE.bazel
gnu/awk/patches/: bazel.patch
gnu/tar/: MODULE.bazel
gnu/tar/patches/: bazel.patch  csources.patch
toolchains/darwin/: MODULE.bazel  catalog.py  expand_pkg.bzl  pbzx.c  sysroot.bzl  xar.py
toolchains/windows/: BUILD.bazel  MODULE.bazel  mingw_w64_toolchain.bzl
