module(
    name = "gnuawk",
    version = "5.3.1",
    compatibility_level = 1,
)
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "platforms", version = "0.0.8")


http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "gawk",
    integrity = "sha256-aU23ZIEqYjZCPU/0DOt7bExEEwG3KtUCu1wn4AzVb3g=",
    strip_prefix = "gawk-5.3.1",
    urls = [
        "https://ftp.gnu.org/gnu/gawk/gawk-5.3.1.tar.xz",
    ],
    patches = [
        "//patches:bazel.patch",
    ],
    patch_args = [
        "-p1"
    ],
)