load(":mingw_w64_toolchain.bzl", "cc_toolchain_config")

platform(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
        "@bazel_tools//tools/cpp:mingw",
    ],
)

filegroup(name = "empty")

cc_toolchain_config(name = "linux_migw64_toolchain_config")

cc_toolchain(
    name = "linux_mingw64_cc_toolchain",
    toolchain_identifier = "linux_mingw64-toolchain",
    toolchain_config = ":linux_migw64_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

toolchain(
    name = "linux_mingw64_toolchain",
    toolchain = ":linux_mingw64_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    exec_compatible_with = [
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@bazel_tools//tools/cpp:mingw",
    ],
)

